# c-csv

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  main.c
include/: c-csv.h  csv.h  reader.h  status.h  strtokoc.h
src/: reader.c  strtokoc.c
